--- a/exercise-21.qmd
+++ b/exercise-21.qmd
@@ -5,6 +5,28 @@ format: html
 execute:
   echo: true
 ---
+```{r setup}
+library(dataRetrieval)
+library(dplyr)
+library(tidyverse)
+library(ggplot2)
+library(lubridate)
+library(zoo)
+library(tsibble)
+
+# Example: Cache la Poudre River at Mouth (USGS site 06752260)
+poudre_flow <- readNWISdv(siteNumber = "06752260",    # Download data from USGS for site 06752260
+                          parameterCd = "00060",      # Parameter code 00060 = discharge in cfs)
+                          startDate = "2013-01-01",   # Set the start date
+                          endDate = "2023-12-31") |>  # Set the end date
+  renameNWISColumns() |>                              # Rename columns to standard names (e.g., "Flow", "Date")
+  mutate(Date = yearmonth(Date)) |>                   # Convert daily Date values into a year-month format (e.g., "2023 Jan")
+  group_by(Date) |>                                   # Group the data by the new monthly Date
+  summarise(Flow = mean(Flow))                       # Calculate the average daily flow for each month
+```
+
 ```{r}
+as_tsibble(poudre_flow)
 
 ```
+
